--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>3.4.0</version>
+        </dependency>
     </dependencies>
 
     <build>
